Reverse index on java agent plus offline flow